a.GERONIMO-5491 Add a test case provided by Han Hong Fang b.Format the codes of ThreadPool
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@995369 13f79535-47bb-0310-9956-ffa450edef68